<resources>
    <string name="app_name">Todo</string>
    <string name="my_todos">Мои дела</string>
    <string name="done">Выполнено -</string>
    <string name="Visibility">visibility</string>
    <string name="button_add">Кнопка Добавить</string>
    <string name="button_back">Кнопка Назад</string>
    <string name="date_and_time">Дата и время</string>
    <string name="newTodo">Новое</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="what_to_do">Что надо сделать...</string>
    <string name="importance">Важность</string>
    <string name="until">Сделать до</string>
    <string name="delete">Удалить</string>
    <string name="settings_snackbar">Выбранные настройки будут применены при перезапуске приложения</string>
    <string-array name="importance_options">
        <item>Нет</item>
        <item>Высокая</item>
        <item>Низкая</item>
    </string-array>
</resources>