<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/BackPrimary"
    tools:context=".AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/close"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save"
            android:textColor="@color/Blue"
            android:textSize="16sp" />


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/todo_back"
        android:padding="16dp"
        android:elevation="8dp">

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="72dp"
            android:gravity="start|top"
            android:background="@color/BackSecondary"
            android:hint="@string/what_to_do"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/importance"
        android:textSize="16sp" />
    <Spinner
        android:id="@+id/spinner_importance"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="60dp"
        android:entries="@array/importance_options" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray"
        android:layout_marginHorizontal="16dp"/>

    <LinearLayout
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/until"/>
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"/>

        </LinearLayout>


        <Switch
            android:id="@+id/switch_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Gray"/>


    <LinearLayout
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/delete_red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="8dp"
            android:text="@string/delete"
            android:textColor="@color/Red"/>



    </LinearLayout>




</LinearLayout>