<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackPrimary"
    tools:context=".MainFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/BackPrimary"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/my_todos"
            app:expandedTitleMarginStart="60dp"
            app:expandedTitleMarginTop="50dp"
            app:expandedTitleMarginBottom="32dp"
            app:collapsedTitleTextAppearance="@style/CollapsedToolbarTitle"
            app:expandedTitleTextAppearance="@style/ExpandedToolbarTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/BackPrimary">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                android:paddingStart="60dp"
                android:layout_gravity="bottom"
                android:paddingEnd="24dp">


                <TextView
                    android:id="@+id/done"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/done"
                    android:textSize="16sp"
                    android:textColor="@color/LabelTertiary"
                    />

                <ToggleButton
                    android:id="@+id/eye"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:textOn=""
                    android:textOff=""
                    android:background="@drawable/toggle"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/Visibility" />





            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height = "?attr/actionBarSize"
                android:background="@color/BackPrimary"
                android:elevation="8dp"
                app:layout_collapseMode="pin">
            </androidx.appcompat.widget.Toolbar>




        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:elevation="8dp"
                android:background="@drawable/todo_back"
                android:paddingVertical="8dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:shapeAppearance="@drawable/button_add"
        app:srcCompat="@drawable/add"
        app:backgroundTint="@color/Blue"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="bottom|end"
        android:contentDescription="@string/button_add" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>